--- a/index.html
+++ b/index.html
@@ -14,9 +14,31 @@
             width: 100vw;
             background-color: #fff;
         }
+        .section
+        {
+            width: 100%;
+            height: 12rem;
+            background-color: aquamarine;
+        }
+        .profile-img
+        {
+            width: 30%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
-     Hello Eppadi iruka
+    <div class="section1">
+        <div class="profile-img">
+
+        </div>
+        <div class="profile-data">
+
+        </div>
+    </div>
+    <div class="section2"></div>
+    <div class="section3"></div>
+    <div class="section4"></div>
+    <div class="section5"></div>
 </body>
 </html>
