--- a/index.html
+++ b/index.html
@@ -14,26 +14,34 @@
             width: 100vw;
             background-color: #fff;
         }
-        .section
+        .section1
         {
             width: 100%;
             height: 12rem;
-            background-color: aquamarine;
+            background-color: rgb(0, 219, 55);
         }
-        .profile-img
+        .profile-image>img
         {
-            width: 30%;
-            height: 100%;
+            width: auto;
+            height: 100px;
+            border-radius: 100px;
+
+        }
+        section-title
+        {
+            color:
         }
     </style>
 </head>
 <body>
     <div class="section1">
-        <div class="profile-img">
-
+        <div class="profile-image">
+            <img src="C:\Users\JAGADHEESH\OneDrive\Desktop\MERN\Website\assets\profile.jpeg">
         </div>
         <div class="profile-data">
-
+            <h1 class="section-title">
+                Jagadheesh B
+            </h1>
         </div>
     </div>
     <div class="section2"></div>
