--- a/index.html
+++ b/index.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-            margin : 0px;
-            padding: 0px;
-        }
-        body{
-            height: 100vh;
-            width: 100vw;
-            background-color: #fff;
-        }
-        .section1
-        {
-            width: 100%;
-            height: 12rem;
-            background-color: rgb(0, 219, 55);
-        }
-        .profile-image>img
-        {
-            width: auto;
-            height: 100px;
-            border-radius: 100px;
-
-        }
-        section-title
-        {
-            color:
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="section1">
@@ -46,7 +19,17 @@
     </div>
     <div class="section2"></div>
     <div class="section3"></div>
-    <div class="section4"></div>
+    <div class="section4">
+        <h1 class="section-title">
+
+        </h1>
+        <p>
+
+        </p>
+        <p>
+            
+        </p>
+    </div>
     <div class="section5"></div>
 </body>
 </html>
