--- a/index.html
+++ b/index.html
@@ -4,21 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets\css\styles.css">
 </head>
 <body>
     <div class="section1">
-        <div class="profile-image">
-            <img src="C:\Users\JAGADHEESH\OneDrive\Desktop\MERN\Website\assets\profile.jpeg">
+        <div class="profile-img-section">
+            <img src="assets\profile.jpeg" alt="profile photo" class="profile-img">
         </div>
         <div class="profile-data">
-            <h1 class="section-title">
+            <h1>
                 Jagadheesh B
             </h1>
+            <h3>
+                sample@gmail.com
+            </h3>
         </div>
     </div>
-    <div class="section2"></div>
-    <div class="section3"></div>
+    <div class="section2">
+        <h1 class="section-title">
+            Objective
+        </h1>
+        <p>
+            this is the sample content
+        </p>
+    </div>
+    <div class="section3">
+        <h1 class="section-title">
+            Education
+        </h1>
+        <table class="ed-table">
+            <tr>
+                <th>Degree</th>
+                <th>Campus</th>
+                <th>Score</th>
+            </tr>
+            <tr>
+                <td>Deg1</td>
+                <td>School1</td>
+                <td>85%</td>
+            </tr>
+            <tr>
+                <td>Deg2</td>
+                <td>School2</td>
+                <td>85%</td>
+            </tr>
+            <tr>
+                <td>Deg3</td>
+                <td>School3</td>
+                <td>85%</td>
+            </tr>
+        </table>
+    </div>
     <div class="section4">
         <h1 class="section-title">
 
