--- a/sample-style.html
+++ b/sample-style.html
@@ -13,4 +13,30 @@
         <div class="box_green">green</div>
     </div>
 </body>
+<script>
+    // number
+    let x=10;
+    console.log(x+x);
+    console.log(typeof(x));
+    //string
+    let y="10";
+    console.log(x+y);
+    console.log(typeof(y));
+    let bool = true; //boolean
+    console.log(bool);
+    console.log(typeof(bool));
+    let z;  //undefined
+    console.log(z);
+    let l=null;
+    console.log(l);
+    console.log(typeof(l));
+    let cars = ["Volvo","BMW"];
+    console.log(cars);
+    console.log(typeof(cars));
+    let carsjson = {
+        "firstcar":"Volvo",
+        "secondcar":"BMW"};
+    console.log(carsjson);
+    console.log(typeof(carsjson));
+</script>
 </html>
