--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jagadheesh_portfolio</title>
     <link rel="stylesheet" href="assets\css\styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="section1">
@@ -57,21 +58,41 @@
     </div>
     <div class="section4">
         <h1 class="section-title">
-            Working Experience
+            About Me
         </h1>
         <p>
-            Senior Project Manager | Smith Agency, New York City | 09/2022 - Present
-Matthew Connors has been driving the development, implementation, and support of large-scale enterprise project management methodologies. In his current role, he collaborates closely with stakeholders to create tailored project plans that meet customer needs while staying within budget. He leads cross-functional teams, ensuring seamless communication between internal staff and external vendors. His work focuses on identifying improvements, cost-saving strategies, and future planning for ongoing projects.
+          <div class="list-style">Skills</div>
+            <ul class="list-item">
+              <li><i class="fa-brands fa-html5"></i> HTML</li>
+              <li><i class="fa-brands fa-css3-alt"></i> CSS</li>
+              <li><i class="fa-brands fa-js"></i> Javascript</i></li>
+              <li><i class="fa-solid fa-code"></i> C</i></li>
+              <li><i class="fa-solid fa-database"></i> MongoDB</i></li>
+              <li><i class="fa-brands fa-git-alt"></i> Git</i></li>
+            </ul>
         </p>
     </div>
     <div class="section5">
-        <h1 class="section-title">Internship</h1>       
-        <p></p>
+        <h1 class="section-title">Projects</h1>       
+            <ul class="list-item">
+          <li><i class="fa-solid fa-diagram-project"></i> Bus route prediction Technology</li>
+          <div class="project-des">
+            <p><i class="fa-solid fa-radiation"></i> The bus routine prediction technology designed to enhance public transportation efficiency.</p>
+              <p><i class="fa-solid fa-radiation"></i> Leveraging data analytics and machine learning, the system forecasts bus arrival times, optimizing commuter experience and facilitating better urban mobility. </p>
+              <p><i class="fa-solid fa-radiation"></i> The technology integrates real-time factors such as traffic patterns and historical data to provide accurate predictions, contributing to a more reliable and responsive public transit system.</p>
+              <p><i class="fa-solid fa-radiation"></i> The incorporation of user feedback mechanisms further refines the system, creating a responsive and user-centric public transit experience.</p> 
+              <p><i class="fa-solid fa-radiation"></i> This innovative Bus Routine Transport abstracts traditional schedules, offering a dynamic and efficient solution for urban mobility</p>
+            </div>    
+          <li><i class="fa-solid fa-diagram-project"></i>Agro Master</li>
+          <div class="project-des">
+            <p><i class="fa-solid fa-radiation"></i> Modern agriculture is evolving rapidly with the integration of advanced technologies and practices aimed at maximizing productivity while minimizing resource utilization. This Project explores the multifaceted dynamics of contemporary agricultural systems, focusing on essential components such as tractor services, product trading (including seeds), and pesticide management.</p>
+            </div>    
+        </ul>
     </div>
     <ul class="example-2">
         <li class="icon-content">
           <a
-            href="https://linkedin.com/"
+            href="https://www.linkedin.com/in/jagadheesh-b-195381277"
             aria-label="LinkedIn"
             data-social="linkedin"
           >
@@ -113,32 +134,9 @@ Matthew Connors has been driving the development, implementation, and support of
           </a>
           <div class="tooltip">GitHub</div>
         </li>
+        
         <li class="icon-content">
-          <a
-            href="https://wa.link/gbdw0w"
-            aria-label="Instagram"
-            data-social="instagram"
-          >
-            <div class="filled"></div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-instagram"
-              viewBox="0 0 16 16"
-              xml:space="preserve"
-            >
-              <path
-                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
-                fill="currentColor"
-              ></path>
-            </svg>
-          </a>
-          <div class="tooltip">Instagram</div>
-        </li>
-        <li class="icon-content">
-          <a href="https://youtube.com/" aria-label="Youtube" data-social="youtube">
+          <a href="https://www.youtube.com/@thamizhaninkural4749" aria-label="Youtube" data-social="youtube">
             <div class="filled"></div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
