--- a/form.html
+++ b/form.html
@@ -14,26 +14,31 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            font-family: 'Times New Roman', Times, serif;
+            background: #cc2b5e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #753a88, #cc2b5e);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #753a88, #cc2b5e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
         }
         .center-form {
             width: 30%;
             padding: 10px;
-            border: solid;
-            background-color: rgb(218, 220, 220);
+            filter: blur(1px);
             border-radius: 15px;
             justify-content: center;
             height: auto;
             box-shadow:
-                1.8px 1.8px 0.3px rgba(0, 0, 0, 0.014),
-                3.6px 3.6px 0.6px rgba(0, 0, 0, 0.028),
-                5.2px 5.2px 0.9px rgba(0, 0, 0, 0.04),
-                6.7px 6.7px 1.3px rgba(0, 0, 0, 0.052),
-                8.2px 8.2px 1.8px rgba(0, 0, 0, 0.063),
-                9.5px 9.5px 2.5px rgba(0, 0, 0, 0.072),
-                10.8px 10.8px 3.5px rgba(0, 0, 0, 0.081),
-                12.3px 12.3px 5.3px rgba(0, 0, 0, 0.09),
-                15.1px 15.1px 8.8px rgba(0, 0, 0, 0.102),
-                25px 25px 19px rgba(0, 0, 0, 0.14);
+  0px 0px 5px rgba(0, 0, 0, 0.015),
+  0px 0px 8.7px rgba(0, 0, 0, 0.022),
+  0px 0px 11.6px rgba(0, 0, 0, 0.027),
+  0px 0px 13.8px rgba(0, 0, 0, 0.031),
+  0px 0px 15.8px rgba(0, 0, 0, 0.035),
+  0px 0px 17.8px rgba(0, 0, 0, 0.039),
+  0px 0px 20px rgba(0, 0, 0, 0.043),
+  0px 0px 23.2px rgba(0, 0, 0, 0.048),
+  0px 0px 28.5px rgba(0, 0, 0, 0.055),
+  0px 0px 45px rgba(0, 0, 0, 0.07)
+;
         }
         .content {
             border-radius: 10px;
@@ -44,10 +49,11 @@
         input
         {
             border-radius: 10px;
-            padding: 10px;
+            padding: 15px;
             width: 80%;
+            border: none;
         }
-        input:hover
+        #name
         {
             border-bottom: 10px;
             border-color: blueviolet;
@@ -56,30 +62,28 @@
         {
             color:white;
             background-color: blueviolet;
-            padding: 10px;
-            width: 80%;
+            padding: 15px;
+            width: 85%;
+            border-radius: 10px;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: large;
+            border-style: none;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
         
-    <form class="center-form" onsubmit="return showName(event)">
+    <form action="#action" method="POST" class="center-form" >
         <h1><center>Contact Form</center></h1>
         <div class="content">
             <input type="text" name="name" id="name" placeholder="Name"><br><br>
             <input type="email" name="email" id="email" placeholder="Email" required><br><br>
             <input type="phone" name="phone" id="phone" placeholder="Phone" required><br><br>
             <input type="password" name="password" id="password" placeholder="Password" required><br><br>
-            <input type="submit" class="button" value="Register">
+            <button type="submit" class="button">Register</button>
         </div>
     </form>
-    <script>
-        function showName(event) {
-            event.preventDefault(); // Prevent form from submitting
-            let name = document.getElementById("name").value;
-            alert("Hi " + name);
-        }
-    </script>
 
 </body>
 </html>
